# evcharger-app

./: .gitignore  .gitmodules  AboutPage.qml  AddDeviceScreen.qml  AnimatedStackView.qml  ApiKeyValueItem.qml  ApiSettingsPage.qml  AppInstance.qml  AppSettingsPage.qml  CMakeLists.txt  CellularPage.qml  CenteredDialog.qml  ChangeNumberItem.qml  ChargerTabPage.qml  ChargingConfigurationPage.qml  ChargingSpeedPage.qml  CloudPage.qml  ConfirmingOnOffSwitch.qml  ConnectingScreen.qml  ConnectionPage.qml  Constants.qml  ControllerTabPage.qml  DailyTripPage.qml  DeviceListScreen.qml  DeviceScreen.qml  Dockerfile  EVChargerApp.qml  EcoTabPage.qml  EditValueItem.qml  EthernetPage.qml  FirmwarePage.qml  FlexibleEnergyTariffPage.qml  GeneralOnOffSwitch.qml  GeneralPage.qml  HardwareInformationPage.qml  HotspotPage.qml  InformationsTabPage.qml  KwhLimitPage.qml  LedPage.qml  MainScreen.qml  (+40 more)
.github/workflows/: build-aarch64-app.yml  build-docker-image.yml
android/: AndroidManifest.xml
android/src/: QZeroConfNsdManager.java
evcharger-app/: CMakeLists.txt  apikeyvaluehelper.h  appsettings.cpp  appsettings.h  deviceconnection.cpp  deviceconnection.h
evcharger-app/android/: AndroidManifest.xml
evcharger-app/android/src/: QZeroConfNsdManager.java
evcharger-app/i18n/: qml_de.ts
evcharger-app/qml/: AboutPage.qml  AccessPage.qml  AddDeviceScreen.qml  ApiKeyValueItem.qml  AppInstance.qml  BaseNavigationPage.qml  CarPage.qml  ChargerTabPage.qml  CloudApiQrCodePage.qml  CloudUrlsModel.qml  ControllerPage.qml  ControllerTabPage.qml  CurrentLevelsPage.qml  DateAndTimePage.qml  DeviceScreen.qml  DisplaySettingsPage.qml  FirmwarePage.qml  GeneralOnOffSwitch.qml  InformationsTabPage.qml  LicensesPage.qml  NamePage.qml  NavigationItem.qml  OcppPage.qml  OpenLinkButton.qml  PasswordPage.qml  RebootPage.qml  SelectPhaseSwitchModeItem.qml  SendMessageButton.qml  SensorsConfigurationPage.qml  SettingsTabPage.qml  TimeComponentLabel.qml  TimePickerDialog.qml  TitleText.qml  WiFiErrorsPage.qml  WiFiPage.qml  qmldir
evcharger-app/qml/js/: qrcode.min.js
flotten-updater/: CMakeLists.txt  addserialsrangedialog.cpp  addserialsrangedialog.h  addserialsrangedialog.ui  chargerconnection.cpp  chargerconnection.h  chargersmodel.cpp  chargersmodel.h  deviceconnection.cpp  deviceconnection.h  devicesmodel.cpp  devicesmodel.h  flottenupdatersettings.cpp  flottenupdatersettings.h  goe-root-ca.pem  importcertificatedialog.cpp  importcertificatedialog.h  importcertificatedialog.ui  importcredentialsdialog.cpp  importcredentialsdialog.h  importcredentialsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  requestdialog.cpp  requestdialog.h  requestdialog.ui  requestmodel.cpp  requestmodel.h  setarbitraryapikeydialog.cpp  setarbitraryapikeydialog.h  setarbitraryapikeydialog.ui
goecommon/: CMakeLists.txt  goesettings.cpp  goesettings.h
i18n/: qml_de.ts
qml/: AnimatedStackLayout.qml  ApiSettingsPage.qml  BaseNavigationPage.qml  CablePage.qml  CellularPage.qml  ChargingConfigurationPage.qml  ChargingSpeedPage.qml  ConnectingScreen.qml  DeviceHeaderBar.qml  DoubleSpinBox.qml  EVChargerApp.qml  EditValueItem.qml  FirmwarePage.qml  GeneralPage.qml  GridPage.qml  GroundCheckPage.qml  HardwareInformationPage.qml  HotspotPage.qml  InformationsTabPage.qml  LoadBalancingPage.qml  LogicModeButton.qml  MainScreen.qml  MqttPage.qml  OcppPage.qml  PvSurplusPage.qml  QrCode.qml  RequestStatusText.qml  ScrollableTabPage.qml  SetPriceLimitPage.qml  StartStopButton.qml  TimePickerLabel.qml  WhiteSwipeDelegate.qml  WiFiScanPage.qml  qmldir
qml/js/: qrcode.min.js
src/: deviceconnection.cpp  sendmessagehelper.cpp
